<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  ~ Modified by Danthe Theuma under the GNU v3 license.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="calendar_tasks_button">iCloud calendar and tasks</string>
    <string name="davdroid_website">Sync for iCloud Web site</string>
    <string name="title_activity_internet_browser">iCloud Internet Browser</string>
    <string name="about_title">About</string>
    <string name="about_message"></string>
    <string name="account_header_text">Manage contacts</string>
    <string name="account_body_text">Manage iCloud accounts for contacts.</string>
    <string name="otherapps_header_text">Manage iCloud</string>
    <string name="otherapps_body_text">Manage iCloud accounts for calendar, tasks, and mail.</string>
    <string name="ads_header_text">Remove ads</string>
    <string name="ads_body_text">Remove ads through in-app purchase via Google PlayStore.</string>

    <string name="icloud_tasks">iCloud Tasks</string>
    <string name="HIDE_AD_BOOLEAN">HIDE_AD_BOOLEAN</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="delete">Delete</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_from_device">Remove account from device.</string>
    <string name="add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="icloud_contacts">iCloud Calendar and Tasks</string>
    <string name="icloud_mail">iCloud Mail</string>
    <string name="tap_it_fast">Tap it fast!</string>
    <string name="press_here_to_install">Press here to install</string>

    <!-- common strings -->
    <string name="app_name">Sync for iCloud Contacts</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="please_wait">Please wait</string>
    <string name="send">Send</string>
    <string name="skip">Skip</string>

    <!-- MainActivity -->
    <string name="main_manage_accounts">Manage sync accounts</string>
    <string name="main_show_debug_info">Show debug info</string>



    <!-- AddAccountActivity -->
    <string name="login_type_email">Login with email address</string>
    <string name="login_type_email_description">Service details will be auto-detected by domain name. Example: myaccount@icloud.com</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_type_url_description">Service details will be auto-detected by initial URL and user name. Mostly used for self-hosted services.</string>
    
    <string name="login_email_description">Please enter your email address. Its domain name will be used to auto-detect service settings.</string>
    <string name="login_email_address">Email</string>
    
    <string-array name="login_url_scheme">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="login_http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string name="login_user_name">User name:</string>
    <string name="login_base_url">Base URL (collections will be auto-detected):</string>
    <string name="login_auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>

    <string name="login_password">Password</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_no_accounts">No iCloud accounts found</string>
    <string name="settings_authentication">Authentication</string>
    <string name="settings_username">User name</string>
    <string name="settings_enter_username">Enter user name:</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_summary">Update the password according to your server.</string>
    <string name="settings_enter_password">Enter your password:</string>
    <string name="settings_preemptive">Pre-emptive authentication</string>
    <string name="settings_preemptive_on">Credentials are sent with every request (recommended)</string>
    <string name="settings_preemptive_off">Credentials are sent after server requests them</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval_contacts">Contacts synchronisation interval</string>
    <string name="settings_sync_summary_manually">Only manually</string>
    <string name="settings_sync_summary_periodically" tools:ignore="PluralsCandidate">Every %d minutes + immediately on local changes</string>
    <string name="settings_sync_summary_not_available">Not available</string>
    <string name="settings_sync_interval_calendars">Calendars sync. interval</string>
    <string name="settings_sync_interval_tasks">Tasks sync. interval</string>
    <string-array name="settings_sync_interval_seconds">
        <item>-1</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>86400</item>
    </string-array>
    <string-array name="settings_sync_interval_names">
        <item>Only manually</item>
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 4 hours</item>
        <item>Once a day</item>
    </string-array>
    <string name="settings_debug">Debugging</string>
    <string name="settings_security_warning">Potential security risk!</string>
    <string name="settings_log_to_external_file">Log to external file</string>
    <string name="settings_log_to_external_file_confirmation">External log files will contain private data and be accessible by other apps. Turn off external logging and delete the log files after use.</string>
    <string name="settings_log_to_external_file_on">Logs are written to %s (if possible)</string>
    <string name="settings_log_to_external_file_no_external_storage">External storage is not available</string>
    <string name="settings_log_to_external_file_off">Logs are written to ADB</string>
    <string name="settings_log_verbose">Verbose logging</string>
    <string name="settings_log_verbose_on">Log synchronization information and network traffic</string>
    <string name="settings_log_verbose_off">Log only synchronization information</string>

    <string name="settings_android_update_title">Android version update</string>
    <string name="settings_android_update_description">Android version updates may have an impact on how iCloud works. If there are problems, please delete your iCloud accounts and add them again.</string>
    <string name="settings_version_update_title">Settings have been updated</string>
    <string name="settings_version_update_description">Internal settings have been updated. If there are problems, please uninstall iCloud and then install it again.</string>

    <string name="setup_resource_detection">Resource detection</string>
    <string name="setup_no_collections_found">No address books or calendars were found. This may happen because of incorrect credentials. \nIf you are using 2 factor authentication, make sure to use an app specific password.</string>
    <string name="setup_view_logs">View logs</string>
    <string name="setup_add_account">Add account</string>
    <string name="setup_querying_server">Loading...</string>
    <string name="setup_what_to_sync">Which collections shall be synchronized?</string>
    <string name="setup_address_books">Address books</string>
    <string name="setup_calendars">Calendars</string>
    <string name="setup_task_lists">Task lists</string>
    <string name="setup_select_address_book">Select up to one address book (tap again to unselect) for synchronization:</string>
    <string name="setup_select_calendars">Select calendars for synchronization:</string>
    <string name="setup_select_task_lists">Select task lists for synchronization:</string>
    
    <string name="setup_account_details">Account</string>
    <string name="setup_account_name">Account name</string>
    <string name="setup_account_name_hint">My iCloud Account</string>
    <string name="setup_email_address">iCloud email address</string>
    <string name="setup_organizer_hint">"Organiser of your events is required if you use attendee information."</string>
    <string name="setup_account_name_info">"Enter a different account name for each account.</string>
    <string name="setup_read_only">read-only</string>

    <!-- sync errors and DebugInfoActivity -->
    <string name="debug_info_title">Debug information</string>
    <string name="sync_error_calendar">Calendar synchronization error (%s)</string>
    <string name="sync_error_contacts">Address book synchronization error (%s)</string>
    <string name="sync_error_tasks">Task synchronization error (%s)</string>
    <string name="sync_error">Failure encountered while %s</string>
    <string name="sync_error_http_dav">Server failure encountered while %s</string>
    <string name="sync_error_local_storage">Database failure encountered while %s</string>
    <string-array name="sync_error_phases">
        <item>preparing...</item>
        <item>checking boundaries...</item>
        <item>processing locally entries (delete)...</item>
        <item>preparing entries...</item>
        <item>uploading entries...</item>
        <item>checking state...</item>
        <item>listing offline entries...</item>
        <item>listing online entries...</item>
        <item>comparing entries...</item>
        <item>downloading online entries...</item>
        <item>saving sync state...</item>
    </string-array>
    <string name="sync_error_unauthorized">Username or password is incorrect.</string>



</resources>

