<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_email_description"
            android:visibility="gone"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/email_address"
            android:text="@string/login_email_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView9"
            android:textSize="8pt"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#34aadc" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:id="@+id/email_address"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:imeOptions="actionNext"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:hint="myaccount@icloud.com"
            android:layout_below="@+id/textView9"
            android:layout_centerHorizontal="true"
            android:background="@drawable/field_border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"
            android:textColor="#8e8e93"
            android:textColorHint="#BDBEC2">
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password"
            android:id="@+id/textView10"
            android:textSize="8pt"
            android:layout_below="@+id/email_address"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:textColor="#34aadc" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:id="@+id/password"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:imeOptions="actionGo"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:text=""
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:background="@drawable/field_border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="#BDBEC2"
            android:textColor="#8e8e93" />

    </RelativeLayout>
</ScrollView>